--- a/Face_landmark_using_CNN.ipynb
+++ b/Face_landmark_using_CNN.ipynb
@@ -1195,7 +1195,8 @@
      "iopub.status.idle": "2021-10-06T07:52:32.158580Z",
      "shell.execute_reply": "2021-10-06T07:52:32.157779Z",
      "shell.execute_reply.started": "2021-10-06T07:52:31.975606Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1220,6 +1221,14 @@
     "plt.scatter(pred[index,:][0:-1:2],pred[index,:][1::2],c='b')\n",
     "plt.axis('off')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### References\n",
+    "[1] Facial Landmark, https://www.kaggle.com/satyaprakash13820/facial-landmark"
    ]
   }
  ],
