--- a/Face_landmark_using_CNN.ipynb
+++ b/Face_landmark_using_CNN.ipynb
@@ -646,7 +646,8 @@
    },
    "outputs": [],
    "source": [
-    "model.compile(loss = 'mean_squared_error', optimizer = Adam(), metrics=['mean_squared_error'])"
+    "model.compile(loss = 'mean_squared_error', optimizer = Adam(), \n",
+    "              metrics=['mean_squared_error'])"
    ]
   },
   {
@@ -1248,7 +1249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
